# YPC-algo-example

./: .gitignore  CMakeLists.txt
dataset/: a.csv  b.csv  business.csv
example/iris/analyzer/enclave/: CMakeLists.txt  enclave_iris_parser.h
example/multi_stream/: CMakeLists.txt
example/multi_stream/generator/: CMakeLists.txt  gen_data.cpp  gen_param.cpp
example/multi_stream/plugin/: CMakeLists.txt  blockfile_reader.cpp
example/pir/enclave/: CMakeLists.txt  pir_parser.cpp  pir_parser.h  user_type.h
example/pir/plugin/: CMakeLists.txt  reader.cpp  user_type.h
example/psi/enclave/: CMakeLists.txt  psi_parser.h
example/psi/plugin/: CMakeLists.txt  reader_a.cpp  reader_b.cpp  user_type.h
generator/: gen_input_params.py
hello/enclave/: CMakeLists.txt  eparser.cpp  hello.h
integrate/: VIEM.sealed.output  classic_job.py  common.py  iris.sealed.output  job_step.py  multistream_job.py  project.py.in  test_VIEM.py  test_image_blur.py  test_iris.py  test_pir.py  test_psi.py
integrate/js/: package-lock.json  package.json
src/VIEM/enclave/: CMakeLists.txt  enclave.config.xml  enclave_parser.h  eparser.cpp  user_type.h
src/VIEM/include/: user_type.h
src/VIEM/plugin/plugin/: CMakeLists.txt  image_reader.cpp  image_reader.h
src/VIEM/plugin/reader/reader/: CMakeLists.txt
src/image_blur/: CMakeLists.txt
src/image_blur/enclave/: CMakeLists.txt  enclave_parser.h
src/image_blur/plugin/plugin/: image_reader.cpp  image_reader.h
src/image_blur/plugin/reader/: CMakeLists.txt
src/image_blur/plugin/reader/output/: user_type.h
src/image_blur/plugin/reader/reader/: reader.cpp
src/iris/: CMakeLists.txt
src/iris/analyzer/enclave/: CMakeLists.txt  eparser.cpp
src/multi_personlist/: common.h
src/multi_personlist/generator/: CMakeLists.txt  main.cpp
src/personlist/first_match/normal/: CMakeLists.txt
src/personlist/generator/: CMakeLists.txt  main.cpp
toolkit/: plugen.py  sample_data.json
