set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

project(YPCAlgoExample)
cmake_minimum_required(VERSION 3.12)
add_definitions(-std=c++14)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
find_package(SGX REQUIRED)

if(SGX_MODE STREQUAL "Debug")
	message(STATUS "This is a Debug version!")
	add_definitions(-g)
  add_definitions(-O0)
else()
  message(STATUS "This is a " ${SGX_MODE} " version!")
	add_definitions(-O2)
	add_definitions(-DNDEBUG)
endif()

if(NOT DEFINED YPC_INSTALL_DIR)
  set(YPC_INSTALL_DIR /usr/local)
endif()

include_directories(${SGX_INCLUDE_DIR})
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
include_directories(${YPC_INSTALL_DIR}/include)
link_directories(${YPC_INSTALL_DIR}/lib/)
link_directories(${SGX_LIBRARY_DIR})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/)

add_subdirectory(example)
add_subdirectory(integrate)
